Fix issue with jumping textarea tags

--- a/static/src/components/meal_form/steps.css
+++ b/static/src/components/meal_form/steps.css
@@ -20,5 +20,5 @@
   padding: 2px 10px 2px 10px;
   resize: none;
   width: 280px;
+  height: 19px;
 }
-
